# RAT-retrieval-augmented-thinking

./: .gitignore  DOCUMENTATION.md  README.md  functionaldesign.md  list_python_files.py  pyproject.toml  python_files.md  rat_agentic.py  requirements.txt  setup.py  test_agent.py
rat/: __init__.py  rat.py  rat_research.py
rat/research/: __init__.py  __main__.py  circuit_breaker.py  firecrawl_client.py  jina_client.py  main.py  manager.py  monitoring.py  orchestrator.py  output_manager.py  perplexity_client.py  session.py
research_outputs/20250126_083019_find_out_everything_you_can_about_Billit_the_Belgi/: metadata.json  research_info.json  research_paper.md
research_outputs/20250126_083303_python_m_ratrat_research/: metadata.json  research_info.json  research_paper.md
research_outputs/20250126_083456_find_out_everything_you_can_about_Billit_the_Belgi/: metadata.json  research_info.json  research_paper.md
research_outputs/20250126_101958_find_out_everything_you_can_about_Billit__the_Belg/: metadata.json
research_outputs/20250126_102054_find_out_everything_you_can_about_Billit__the_Belg/: metadata.json
research_outputs/20250126_102210_find_out_everything_you_can_about_Billit__the_Belg/: metadata.json  research_paper.md
research_outputs/20250126_102312_find_out_everything_you_can_about_Billit__the_Belg/: metadata.json
research_outputs/20250126_102409_find_out_everything_you_can_about_Billit__the_Belg/: metadata.json  research_paper.md
research_outputs/20250126_102452_find_out_everything_you_can_about_Billit__the_Belg/: metadata.json  research_paper.md
(+68 files in other folders)
